Sun May 27 13:37:06 GMT 2012  Olly Betts <olly@survex.com>

	* php/Makefile.am,php/except.i,php/generate-php-exceptions: Generate
	  php/except.i so we can skip exception handling for XAPIAN_NOTHROW
	  methods.

Sun May 27 12:57:29 GMT 2012  Olly Betts <olly@survex.com>

	* tcl8/Makefile.am,tcl8/except.i,tcl8/generate-tcl-exceptions: Generate
	  tcl8/except.i so we can skip exception handling for XAPIAN_NOTHROW
	  methods.

Sun May 27 12:37:37 GMT 2012  Olly Betts <olly@survex.com>

	* lua/Makefile.am,perl/Makefile.am,python/Makefile.am: Ship the scripts
	  which generate the except.i files.

Sun May 27 12:13:29 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-headers.i: Ignore Xapian API class constructor taking
	  Internal& instead of Internal* (as Query does, to avoid an
	  ambiguity for Query(NULL).

Sun May 27 12:12:45 GMT 2012  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions: Fix to use tabs for indentation in
	  a couple of places where we were using spaces.

Sun May 27 11:48:56 GMT 2012  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions: Don't name exception object we
	  don't inspect.

Sun May 27 10:08:25 GMT 2012  Olly Betts <olly@survex.com>

	* perl/perl.i: Pass 0 instead of NULL for non-pointer parameter to
	  av_fetch (spotted due to GCC 4.7 warning).

Sun May 27 07:32:47 GMT 2012  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions: Remove superfluous ';' after
	  "namespace { [...] }".

Sun May 27 07:29:48 GMT 2012  Olly Betts <olly@survex.com>

	* lua/generate-lua-exceptions,perl/generate-perl-exceptions,
	  python/generate-python-exceptions: Have a single copyright statement
	  at the top of the script (in a $copyright variable), and substitute
	  this into the generated script.

Sun May 27 01:52:08 GMT 2012  Olly Betts <olly@survex.com>

	* lua/generate-lua-exceptions,perl/generate-perl-exceptions,
	  python/generate-python-exceptions: Use new XAPIAN_NOTHROW markers