@@ -13,6 +13,7 @@ endif
 ACLOCAL_AMFLAGS = -I m4
 
 EXTRA_DIST = xapian.i xapian-head.i xapian-headers.i generic/except.i \
+    generic/generate-generic-exceptions \
     xapian-bindings.spec skiptest \
     HACKING
 
@@ -20,8 +21,12 @@ SUBDIRS = . @BINDINGS@
 DIST_SUBDIRS = python php java ruby tcl8 csharp perl lua
 
 if MAINTAINER_MODE
+BUILT_SOURCES = generic/except.i
+generic/except.i: $(srcdir)/generic/generate-generic-exceptions ../xapian-core/exception_data.pm
+	$(PERL) -w -I$(srcdir)/../xapian-core $(srcdir)/generic/generate-generic-exceptions
+
 if !MAINTAINER_NO_DOCS
-BUILT_SOURCES = doxygen-xml/index.xml
+BUILT_SOURCES += doxygen-xml/index.xml
 
 doxygen-xml/index.xml: $(XAPIAN_HEADERS)
 	$(DOXYGEN) doxygen_xml.conf
